tests/trybuild/datetime_fail.rs
fn main() {
  lits::datetime!("not-a-datetime");
}
